--- a/src/Pages/Home/Informations/Informations.css
+++ b/src/Pages/Home/Informations/Informations.css
@@ -1,9 +1,9 @@
 .informations{
-    margin-top: -120px;
+    margin-top: -100px;
 }
 
 @media only screen and (max-width: 992px) and (min-width: 688px)  {
     .informations{
-        margin-top: 0;
+        margin-top: 0 !important;
     }
 }
